# panda-kb-pipeline

./: .gitignore  README.md  environment.yml  loihi_math.ipynb  setup.sh  start-kb.sh  stop_non_essential_serice.sh
dummy-pipeline-1.0/: README.md
dummy-pipeline-1.0/panda-uart/: panda-uart.ino
dummy-pipeline-1.0/teensy/: teensy.ino
include/: Muscle.h  UARTPeripheral.h
latte-panda-setup/: SETUP.md
latte-panda-setup/pinpong-library/: README.md  tutorial-01-blink.py
lib/: __init__.py
lib/burstingNeuron/: burstingNeuron.py
lib/cpg/: InhibitorBase.py  SodiumChannelBase.py  cpg.py  plothelper.py
src/: UARTPeripheral.cpp  main.py  networkHelper.py
tests/Loihi code/: README.docx  oscillator_control_loop.py  oscillator_network.py
tests/cpp-serial-to-ino/: CMakeLists.txt  README.md  arduino_upload.sh  serial.cpp
tests/dummy-pipeline-1.0/: README.md  arduino_manager.py  loihi_utils.py  main.py  serial_comm.py  threading_utils.py
tests/dummy-pipeline-2.0/: CMakeLists.txt  README.md  host_snip.cpp  main.py  precomputed_axons.txt  serial_comm.py
tests/dummy-pipeline-2.0/arduino/: arduino.ino
tests/dummy-pipeline-2.0/include/: Logging.h
tests/dummy-pipeline-2.0/snips/: decoder.c  encoder.c  encoder.h
tests/led-blink/: read_timing_test.py
tests/oscillator/: Makefile  OscGenProcess.py  README.md  SineWaveGenerator  SineWaveGenerator.cpp  SineWaveGenerator_v2  SineWaveGenerator_v2.cpp  loihi-network.py  main.py  oscillator.ipynb  plot-test-loihi.py  runmgmt.c  second-loihi-network.py  sine_wave_data.csv  spike_sender_receiver_example.py  spiking-snip.c  spiking-snip.h
tests/reeces-test/: exec-time-probe.py
tutorials/: README.md
tutorials/cpg/: README.md  bursting_neuron.py  main.py
tutorials/cpp-serial-to-ino/: CMakeLists.txt  serial.cpp
tutorials/cpp-serial-to-ino/teensy/: teensy.ino
tutorials/dummy-pipeline-1.0/: README.md  arduino_manager.py  main.py
tutorials/dummy-pipeline-2.0/: README.md  (+5 more)
utils/: loihi_math_utils.py
(+35 files in other folders)
